--- a/web/src/components/SvgRenderer/SvgRenderer.scss
+++ b/web/src/components/SvgRenderer/SvgRenderer.scss
@@ -31,12 +31,8 @@
   background: var(--panel);
   padding: 0.25rem 0.5rem;
   border-radius: 4px;
-  color: var(--primary);
+  color: var(--primary-text);
   z-index: 5;
   border: 1px solid var(--border);
   text-transform: uppercase;
-
-  @media (prefers-color-scheme: dark) {
-    color: var(--accent);
-  }
 }
